# pypi-package-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.package_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: pypi-publish.yml
{{cookiecutter.package_name}}/tests/: test_dummy.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
